# SimpleWavLib

./: CMakeLists.txt
src/: WavFile.cpp  WavFile.h  main.cpp  shapes.cpp  wavio.cpp
